--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/urbanist": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "axios": "^1.3.5",
     "expo": "~48.0.10",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
