--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo-google-fonts/urbanist": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -27,9 +30,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "tailwindcss": "^3.3.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "expo-file-system": "~15.2.2",
-    "expo-barcode-scanner": "~12.3.2"
+    "uuid": "^9.0.0",
+    "expo-crypto": "~12.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
